--- a/blog.html
+++ b/blog.html
@@ -18,10 +18,49 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_v2.8.5.1_.282015-08-30_20:15_Sun.29'>Release: v2.8.5.1 (2015-08-30 20:15 Sun)</span>
+    </h2>
+    <p>
+      v2.8.5 is a light release. It includes a DMG for Mac OS X and moves the images from /user/anonymous/app to /bin/any/xowa/file
+    </p>
+    <h3>
+      <span class='mw-headline' id='New_Mac_OS_X_DMG'>New Mac OS X DMG</span>
+    </h3>
+    <p>
+      I spent some time putting together a DMG file for Mac OS X. For now, it's only for 64-bit versions (Snow Leopard and up).
+    </p>
+    <h3>
+      <span class='mw-headline' id='Image_update_for_Ukrainian_and_Finnish_wikis'>Image update for Ukrainian and Finnish wikis</span>
+    </h3>
+    <p>
+      These updates were uploaded earlier this week to <a href="https://archive.org/details/Xowa_ukwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_ukwiki_latest</a> and <a href="https://archive.org/details/Xowa_fiwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_fiwiki_latest</a> .
+    </p>
+    <p>
+      I was planning to upload German, but Wikimedia kicked off a new cycle over the weekend. I'll review German this week and upload accordingly
+    </p>
+    <h3>
+      <span class='mw-headline' id='Images_moved_from_.2Fuser.2Fanonymous.2Fapp_to_.2Fbin.2Fany.2Fxowa.2Ffile'>Images moved from /user/anonymous/app to /bin/any/xowa/file</span>
+    </h3>
+    <p>
+      I moved all files and images out of the "/user/" file hierarchy. Basically, I'm planning to reduce "/user/" to only a few files or directories. CSS files will probably be moved out within the next few months as well.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Next_release:_v2.9.1'>Next release: v2.9.1</span>
+    </h3>
+    <p>
+      For images, I'm going to continue image updates with German, Turkish and Indonesian.
+    </p>
+    <p>
+      For development, I plan to keep v2.9.1 light, so will work on either Android or other long-running items
+    </p>
+    <p>
+      <br>
+    </p>
+    <h2>
       <span class='mw-headline' id='Release:_v2.8.4.1_.282015-08-23_21:40_Sun.29'>Release: v2.8.4.1 (2015-08-23 21:40 Sun)</span>
     </h2>
     <p>
-      v2.8.4 is a light release. It supports 7 new Wikimedia wikis and has some Firefox addons.
+      v2.8.4 is a light release. It supports 7 new Wikimedia wikis and has some Firefox addon fixes.
     </p>
     <h3>
       <span class='mw-headline' id='Image_update_for_Persian_and_Bengali_wikis'>Image update for Persian and Bengali wikis</span>
@@ -42,7 +81,7 @@
       There were a few issues with images not loading and sidebar links not working. See <a href="https://github.com/piotrex/XOWA-Addon/issues/2" class="external text" rel="nofollow">https://github.com/piotrex/XOWA-Addon/issues/2</a> and <a href="https://github.com/piotrex/XOWA-Addon/issues/3" class="external text" rel="nofollow">https://github.com/piotrex/XOWA-Addon/issues/3</a>
     </p>
     <h3>
-      <span class='mw-headline' id='Next_release:_v2.8.4'>Next release: v2.8.4</span>
+      <span class='mw-headline' id='Next_release:_v2.8.5'>Next release: v2.8.5</span>
     </h3>
     <p>
       For this week, I'm going to continue image updates with Ukrainian, German and Finnish.
