--- a/download.html
+++ b/download.html
@@ -21,31 +21,31 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.4.1/xowa_app_windows_64_v2.8.4.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_windows_64_v2.8.5.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.4.1/xowa_app_windows_v2.8.4.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_windows_v2.8.5.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Linux'> Linux </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.4.1/xowa_app_linux_64_v2.8.4.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_linux_64_v2.8.5.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.4.1/xowa_app_linux_v2.8.4.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_linux_v2.8.5.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.4.1/xowa_app_macosx_64_v2.8.4.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_macosx_64_v2.8.5.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.4.1/xowa_app_macosx_v2.8.4.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_macosx_v2.8.5.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Source'> Source code </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.8.4.1.zip" class="external text" rel="nofollow">Source code</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.8.5.1.zip" class="external text" rel="nofollow">Source code</a>
   </li>
 </ul>
 
@@ -55,35 +55,28 @@
     </h2>
 
     <h2>
-      <span class='mw-headline' id='v2.8.4.1_.282015-08-24.29'>v2.8.4.1 (2015-08-24)</span>
+      <span class='mw-headline' id='v2.8.5.1_.282015-08-31.29'>v2.8.5.1 (2015-08-31)</span>
     </h2>
     <p>
-      <b>fix</b>
+      <b>package</b>
     </p>
     <ul>
       <li>
-        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: [[Help:Import/List]] <a href="https://ar.wikimedia.org/wiki/">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org/wiki/">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org/wiki/">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" class="external text" rel="nofollow">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org/wiki/">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org/wiki/">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org/wiki/">https://se.wikimedia.org</a>
+        Package: Release image update for Ukrainian wikis (2015-08). See: <a href="https://archive.org/download/Xowa_ukwiki_latest" class="external text" rel="nofollow">https://archive.org/download/Xowa_ukwiki_latest</a>
       </li>
       <li>
-        File: Use thumb size when specified for videos, not original size (affects several video thumbnails showing with large size); EX:[[File:A.ogv|thumb]] -&gt; 220px x&gt; original_px. See: <a href="https://en.wikipedia.org/wiki/Edward_Snowden">https://en.wikipedia.org/wiki/Edward_Snowden</a> <a href="https://en.wikipedia.org/wiki/Xinjiang">https://en.wikipedia.org/wiki/Xinjiang</a> <a href="https://en.wikipedia.org/wiki/Alice_Brady">https://en.wikipedia.org/wiki/Alice_Brady</a> [broken since:v2.8.2]
+        Package: Release image update for Finnish wikis (2015-08). See: <a href="https://archive.org/download/Xowa_fiwiki_latest" class="external text" rel="nofollow">https://archive.org/download/Xowa_fiwiki_latest</a>
+      </li>
+    </ul>
+    <p>
+      <b>add</b>
+    </p>
+    <ul>
+      <li>
+        Setup: Add Mac OS X dmg setup file.
       </li>
       <li>
-        Setup: Fix XOWA root directory for setup_lua.sh (affects error message on console when application first starts; also official lua won't work (LuaJ does)). See: /xowa/bin/os_name/xowa/script/setup_lua.sh
-      </li>
-      <li>
-        Lang: Fix non-working link trail for non-WikiMedia wikis {detected by pirate}. See: <a href="https://nethackwiki.com/wiki/">http://nethackwiki.com</a> [broken since:v2.7.2]
-      </li>
-      <li>
-        FirefoxAddon: Fix XOWA toolbar button and sidebar links; EX:xowa:home //en.wikipedia.org/ {detected by pirate}.
-      </li>
-      <li>
-        FirefoxAddon: Fix images not loading on first view {detected by pirate}.
-      </li>
-      <li>
-        Setup: Enable bundled JRE for Windows .exe. See: /xowa/xowa.exe
-      </li>
-      <li>
-        Make.Images: Fix images not downloading for small wikis.
+        Scribunto.Text: Add basic support for JsonEncode / JsonDecode.
       </li>
     </ul>
     <p>
@@ -91,29 +84,10 @@
     </p>
     <ul>
       <li>
-        Javascript.Find: Allow search by backslash; EX:"C:\XOWA". See: [[Help:Upgrading]]
+        Setup: Change macosx shell scripts from .sh to ""; See: /xowa/xowa_macosx_64.
       </li>
       <li>
-        API.Wikimedia: Add bldr command for downloading wiki meta data. See: [[Help:Import/Command-line/Site meta]]
-      </li>
-    </ul>
-    <p>
-      <b>package</b>
-    </p>
-    <ul>
-      <li>
-        Package: Release image update for Persian wikis (2015-08). See: <a href="https://archive.org/download/Xowa_fawiki_latest" class="external text" rel="nofollow">https://archive.org/download/Xowa_fawiki_latest</a>
-      </li>
-      <li>
-        Package: Release image update for Bengali Wikis (2015-08). See: <a href="https://archive.org/download/Xowa_bnwiki_latest" class="external text" rel="nofollow">https://archive.org/download/Xowa_bnwiki_latest</a>
-      </li>
-    </ul>
-    <p>
-      <b>minor</b>
-    </p>
-    <ul>
-      <li>
-        FirefoxAddon: Include latest version of XOWA Addon (v0.2.1) {detected by pirate}. See: /xowa/bin/any/firefox/xowa_viewer/default/
+        Parser.Title: Ignore BIDI (bi-directional) marks in title {detected by gnosygnu.gui}. See: <a href="/site/fa.wikisource.org/wiki/تصمیم_قانونی_دایر_به‌ابراز‌_رای‌اعتماد_به_دولت_جناب_آقای_امیرعباس_هویدا_نخست‌وزیر_۱۳۵۰">https://fa.wikisource.org/wiki/تصمیم_قانونی_دایر_به‌ابراز‌_رای‌اعتماد_به_دولت_جناب_آقای_امیرعباس_هویدا_نخست‌وزیر_۱۳۵۰</a>
       </li>
     </ul>
     <p>
@@ -121,7 +95,19 @@
     </p>
     <ul>
       <li>
-        Diagnostics: Fix test to expect "home" instead of "Home". See: [[Help:Diagnostics/Scribunto/SiteLibrary]]
+        Url: Ignore invalid urls when entered from url bar {detected by gnosygnu.gui}. See: <a href="https://a" class="external text" rel="nofollow">https://a</a> <a href="https://a/b/c" class="external text" rel="nofollow">https://a/b/c</a> <a href="https://enxyz.wikipedia.org" class="external text" rel="nofollow">https://enxyz.wikipedia.org</a>
+      </li>
+      <li>
+        Setup: Always update version number in xowa.exe and xowa_64.exe. See: /xowa/xowa.exe /xowa/xowa_64.exe
+      </li>
+      <li>
+        Setup: Move edit-toolbar images from /xowa/user/anonymous/app/img/edit to /xowa/bin/any/xowa/html/res/src/xowa/edit-toolbar/img. See: /xowa/bin/any/xowa/html/res/src/xowa/edit-toolbar/img
+      </li>
+      <li>
+        Setup: Move images from /xowa/user/anonymous/app/img/ to /xowa/bin/any/xowa/file/. See: /xowa/bin/any/xowa/file/
+      </li>
+      <li>
+        Html_dump: Handle external links with reparented font elements; EX:&lt;font color="red"&gt;[http://a.org]&lt;/font&gt; {detected by gnosygnu.build.warning}.
       </li>
     </ul>
     <p>
@@ -129,9 +115,15 @@
     </p>
     <ul>
       <li>
-        Source: Clean up Xow_domain_itm and Xow_abrv_wm.
+        Source: Reorganize primitive classes.
+      </li>
+      <li>
+        Source: Refactor json classes.
       </li>
     </ul>
+    <p>
+      <br>
+    </p>
 <!-- page_end -->
     </div>
   </div>
