--- a/image_dbs.html
+++ b/image_dbs.html
@@ -287,7 +287,7 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .xowa .sqlite3
+            .xowa<br/>.sqlite3
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1492,41 +1492,84 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://uk.wikipedia.org/wiki/">http://uk.wikipedia.org</a><br>
-            <a href="https://uk.wiktionary.org/wiki/">http://uk.wiktionary.org</a><br>
-            <a href="https://uk.wikisource.org/wiki/">http://uk.wikisource.org</a><br>
-            <a href="https://uk.wikivoyage.org/wiki/">http://uk.wikivoyage.org</a><br>
-            <a href="https://uk.wikiquote.org/wiki/">http://uk.wikiquote.org</a><br>
-            <a href="https://uk.wikibooks.org/wiki/">http://uk.wikibooks.org</a><br>
-            <a href="https://uk.wikinews.org/wiki/">http://uk.wikinews.org</a>
+            <a href="https://uk.wikipedia.org/wiki/">https://uk.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-07-22<br>
-            2014-07-25<br>
-            2014-07-24<br>
-            2014-07-05<br>
-            2014-07-26<br>
-            2014-07-26<br>
-            2014-07-26
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-08-27
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            9.2
+            10.3
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_ukbundle_latest" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_ukwiki_latest/Xowa_ukwiki_2015-08-07_text.7z" class="external text" rel="nofollow">wiki</a><br>
+             <a href="https://archive.org/download/Xowa_ukwiki_latest/Xowa_ukwiki_2015-08-07_file_core.7z" class="external text" rel="nofollow">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_ukwiki_latest/Xowa_ukwiki_2015-08-07_file_ns-000_part-1.7z" class="external text" rel="nofollow">images.main</a><br>
+             <a href="https://archive.org/download/Xowa_ukwiki_latest/Xowa_ukwiki_2015-08-07_file_ns-100.7z" class="external text" rel="nofollow">images.other</a><br>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://uk.wiktionary.org/wiki/">https://uk.wiktionary.org</a><br>
+            <a href="https://uk.wikisource.org/wiki/">https://uk.wikisource.org</a><br>
+            <a href="https://uk.wikivoyage.org/wiki/">https://uk.wikivoyage.org</a><br>
+            <a href="https://uk.wikiquote.org/wiki/">https://uk.wikiquote.org</a><br>
+            <a href="https://uk.wikibooks.org/wiki/">https://uk.wikibooks.org</a><br>
+            <a href="https://uk.wikinews.org/wiki/">https://uk.wikinews.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07<br>
+            2015-08-07
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-08-27
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            0.3
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_ukwiki_latest/Xowa_ukbundle_2015-08-07.7z" class="external text" rel="nofollow">wikis and images</a><br>
           </p>
         </td>
       </tr>
@@ -1839,35 +1882,38 @@
             <a href="https://fi.wikiquote.org/wiki/">https://fi.wikiquote.org</a><br>
             <a href="https://fi.wikibooks.org/wiki/">https://fi.wikibooks.org</a><br>
             <a href="https://fi.wikiversity.org/wiki/">https://fi.wikiversity.org</a><br>
-            <a href="https://fi.wikinews.org/wiki/">https://fi.wikinews.org</a><br>
+            <a href="https://fi.wikinews.org/wiki/">https://fi.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-03-07<br>
-            2015-03-05<br>
-            2015-02-24<br>
-            2015-03-13<br>
-            2015-03-13<br>
-            2015-03-07<br>
-            2015-03-05<br>
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-08-27
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            6.6
+            6.9
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_fiwiki_latest/Xowa_fibundle_2015-03-15.7z" class="external text" rel="nofollow">bundle: 2015-03-15</a>
+            <a href="https://archive.org/download/Xowa_fiwiki_latest/Xowa_fibundle_2015-08-05.7z" class="external text" rel="nofollow">bundle: 2015-08-05</a>
           </p>
         </td>
       </tr>
