--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
 </td>
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
+  <b>2015-08-31</b> Ukrainian and Finnish wikis released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_ukwiki_latest" class="external text" rel="nofollow">Ukrainian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_fiwiki_latest" class="external text" rel="nofollow">Finnish wikis</a>
+    </li>
+  </ul>
+
   <b>2015-08-24</b> Persian and Bengali wikis released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_fawiki_latest" class="external text" rel="nofollow">Persian wikis</a>
