--- a/download.html
+++ b/download.html
@@ -37,7 +37,7 @@
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_macosx_64_v2.8.5.1.zip" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_macosx_64_v2.8.5.1.dmg" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
   <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_macosx_v2.8.5.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
