--- a/download.html
+++ b/download.html
@@ -21,31 +21,31 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_windows_64_v2.8.5.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.9.1.1/xowa_app_windows_64_v2.9.1.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_windows_v2.8.5.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.9.1.1/xowa_app_windows_v2.9.1.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Linux'> Linux </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_linux_64_v2.8.5.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.9.1.1/xowa_app_linux_64_v2.9.1.1.zip" class="external text" rel="nofollow">Linux (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_linux_v2.8.5.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.9.1.1/xowa_app_linux_v2.9.1.1.zip" class="external text" rel="nofollow">Linux (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Mac_OS_X'> Mac OS X </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_macosx_64_v2.8.5.1.dmg" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.9.1.1/xowa_app_macosx_64_v2.9.1.1.dmg" class="external text" rel="nofollow">Mac OS X (64-bit)</a>
   </li>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.5.1/xowa_app_macosx_v2.8.5.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.9.1.1/xowa_app_macosx_v2.9.1.1.zip" class="external text" rel="nofollow">Mac OS X (32-bit)</a>
   </li>
 </ul>
 
 <h2><span class='mw-headline' id='Source'> Source code </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.8.5.1.zip" class="external text" rel="nofollow">Source code</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/archive/v2.9.1.1.zip" class="external text" rel="nofollow">Source code</a>
   </li>
 </ul>
 
@@ -55,28 +55,36 @@
     </h2>
 
     <h2>
-      <span class='mw-headline' id='v2.8.5.1_.282015-08-31.29'>v2.8.5.1 (2015-08-31)</span>
+      <span class='mw-headline' id='v2.9.1.1_.282015-09-07.29'>v2.9.1.1 (2015-09-07)</span>
     </h2>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        Graph: Add support for Graph extension; EX:/bin/any/xowa/xtns/Graph {detected by gnosygnu.build.warning}. See: [[Help:Diagnostics/Javascript/Graph]] <a href="https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone">https://en.wikipedia.org/wiki/Greek_withdrawal_from_the_eurozone</a> <a href="https://de.wikipedia.org/wiki/Freital">https://de.wikipedia.org/wiki/Freital</a>
+      </li>
+    </ul>
+    <p>
+      <b>fix</b>
+    </p>
+    <ul>
+      <li>
+        Setup: Remove Mac OS X dmg setup file {detected by anonymous4}.
+      </li>
+      <li>
+        Setup: Update shortcut icon path (affects firefox addon and http server not showing xowa icon in tab) {detected by gnosygnu.gui}. [broken since:v2.8.5]
+      </li>
+    </ul>
     <p>
       <b>package</b>
     </p>
     <ul>
       <li>
-        Package: Release image update for Ukrainian wikis (2015-08). See: <a href="https://archive.org/download/Xowa_ukwiki_latest" class="external text" rel="nofollow">https://archive.org/download/Xowa_ukwiki_latest</a>
+        Package: Release image update for German wikis (2015-09). See: <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_dewiki_latest</a>
       </li>
       <li>
-        Package: Release image update for Finnish wikis (2015-08). See: <a href="https://archive.org/download/Xowa_fiwiki_latest" class="external text" rel="nofollow">https://archive.org/download/Xowa_fiwiki_latest</a>
-      </li>
-    </ul>
-    <p>
-      <b>add</b>
-    </p>
-    <ul>
-      <li>
-        Setup: Add Mac OS X dmg setup file.
-      </li>
-      <li>
-        Scribunto.Text: Add basic support for JsonEncode / JsonDecode.
+        Package: Release image update for Turkish wikis (2015-09). See: <a href="https://archive.org/details/Xowa_trwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_trwiki_latest</a>
       </li>
     </ul>
     <p>
@@ -84,41 +92,7 @@
     </p>
     <ul>
       <li>
-        Setup: Change macosx shell scripts from .sh to ""; See: /xowa/xowa_macosx_64.
-      </li>
-      <li>
-        Parser.Title: Ignore BIDI (bi-directional) marks in title {detected by gnosygnu.gui}. See: <a href="/site/fa.wikisource.org/wiki/تصمیم_قانونی_دایر_به‌ابراز‌_رای‌اعتماد_به_دولت_جناب_آقای_امیرعباس_هویدا_نخست‌وزیر_۱۳۵۰">https://fa.wikisource.org/wiki/تصمیم_قانونی_دایر_به‌ابراز‌_رای‌اعتماد_به_دولت_جناب_آقای_امیرعباس_هویدا_نخست‌وزیر_۱۳۵۰</a>
-      </li>
-    </ul>
-    <p>
-      <b>trivial</b>
-    </p>
-    <ul>
-      <li>
-        Url: Ignore invalid urls when entered from url bar {detected by gnosygnu.gui}. See: <a href="https://a" class="external text" rel="nofollow">https://a</a> <a href="https://a/b/c" class="external text" rel="nofollow">https://a/b/c</a> <a href="https://enxyz.wikipedia.org" class="external text" rel="nofollow">https://enxyz.wikipedia.org</a>
-      </li>
-      <li>
-        Setup: Always update version number in xowa.exe and xowa_64.exe. See: /xowa/xowa.exe /xowa/xowa_64.exe
-      </li>
-      <li>
-        Setup: Move edit-toolbar images from /xowa/user/anonymous/app/img/edit to /xowa/bin/any/xowa/html/res/src/xowa/edit-toolbar/img. See: /xowa/bin/any/xowa/html/res/src/xowa/edit-toolbar/img
-      </li>
-      <li>
-        Setup: Move images from /xowa/user/anonymous/app/img/ to /xowa/bin/any/xowa/file/. See: /xowa/bin/any/xowa/file/
-      </li>
-      <li>
-        Html_dump: Handle external links with reparented font elements; EX:&lt;font color="red"&gt;[http://a.org]&lt;/font&gt; {detected by gnosygnu.build.warning}.
-      </li>
-    </ul>
-    <p>
-      <b>dev</b>
-    </p>
-    <ul>
-      <li>
-        Source: Reorganize primitive classes.
-      </li>
-      <li>
-        Source: Refactor json classes.
+        Scribunto.Text: Add more support for JsonEncode / JsonDecode.
       </li>
     </ul>
     <p>
