--- a/image_dbs.html
+++ b/image_dbs.html
@@ -586,22 +586,22 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://de.wikipedia.org/wiki/">https://de.wikipedia.org</a><br>
+            <a href="https://de.wikipedia.org/wiki/">https://de.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-10<br>
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-27
+            2015-09-05
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            34
+            39
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -611,13 +611,13 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-04-10_wiki.7z" class="external text" rel="nofollow">wiki</a><br>
-             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-04-10_file_core.7z" class="external text" rel="nofollow">images.core</a><br>
-             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-04-10_file_ns-000_part-1.7z" class="external text" rel="nofollow">images.main articles.part-1</a><br>
-             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-04-10_file_ns-000_part-2.7z" class="external text" rel="nofollow">images.main articles.part-2</a><br>
-             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-04-10_file_ns-000_part-3.7z" class="external text" rel="nofollow">images.main articles.part-3</a><br>
-             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-04-10_file_ns-000_part-4.7z" class="external text" rel="nofollow">images.main articles.part-4</a><br>
-             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-04-10_file_ns-100.7z" class="external text" rel="nofollow">images.other articles</a><br>
+            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_text.7z" class="external text" rel="nofollow">wiki</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_core.7z" class="external text" rel="nofollow">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-1.7z" class="external text" rel="nofollow">images.main articles.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-2.7z" class="external text" rel="nofollow">images.main articles.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-3.7z" class="external text" rel="nofollow">images.main articles.part-3</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-000_part-4.7z" class="external text" rel="nofollow">images.main articles.part-4</a><br>
+             <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2015-08-07_file_ns-100.7z" class="external text" rel="nofollow">images.other articles</a><br>
           </p>
         </td>
       </tr>
@@ -630,28 +630,28 @@
             <a href="https://de.wikiquote.org/wiki/">https://de.wikiquote.org</a><br>
             <a href="https://de.wikibooks.org/wiki/">https://de.wikibooks.org</a><br>
             <a href="https://de.wikiversity.org/wiki/">https://de.wikiversity.org</a><br>
-            <a href="https://de.wikinews.org/wiki/">https://de.wikinews.org</a><br>
+            <a href="https://de.wikinews.org/wiki/">https://de.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-07<br>
-            2015-04-06<br>
-            2015-04-20<br>
-            2015-04-21<br>
-            2015-04-23<br>
-            2015-04-14<br>
-            2015-04-21<br>
+            2015-09-01<br>
+            2015-09-01<br>
+            2015-09-01<br>
+            2015-09-01<br>
+            2015-09-01<br>
+            2015-09-01<br>
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-27
+            2015-09-05
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            5
+            4.9
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -661,7 +661,7 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_debundle_2015-04-22.7z" class="external text" rel="nofollow">wikis and images</a><br>
+            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_debundle_2015-08-07.7z" class="external text" rel="nofollow">wikis and images</a><br>
           </p>
         </td>
       </tr>
@@ -2088,39 +2088,42 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://tr.wikipedia.org/wiki/">http://tr.wikipedia.org</a><br>
-            <a href="https://tr.wiktionary.org/wiki/">http://tr.wiktionary.org</a><br>
-            <a href="https://tr.wikisource.org/wiki/">http://tr.wikisource.org</a><br>
-            <a href="https://tr.wikiquote.org/wiki/">http://tr.wikiquote.org</a><br>
-            <a href="https://tr.wikibooks.org/wiki/">http://tr.wikibooks.org</a><br>
-            <a href="https://tr.wikinews.org/wiki/">http://tr.wikinews.org</a>
+            <a href="https://tr.wikipedia.org/wiki/">https://tr.wikipedia.org</a><br>
+            <a href="https://tr.wiktionary.org/wiki/">https://tr.wiktionary.org</a><br>
+            <a href="https://tr.wikisource.org/wiki/">https://tr.wikisource.org</a><br>
+            <a href="https://tr.wikiquote.org/wiki/">https://tr.wikiquote.org</a><br>
+            <a href="https://tr.wikibooks.org/wiki/">https://tr.wikibooks.org</a><br>
+            <a href="https://tr.wikinews.org/wiki/">https://tr.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-05-30<br>
-            2014-06-01<br>
-            2014-05-25<br>
-            2014-06-05<br>
-            2014-05-24<br>
-            2014-05-29
+            2015-09-01<br>
+            2015-09-01<br>
+            2015-09-01<br>
+            2015-09-01<br>
+            2015-09-01<br>
+            2015-09-01
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-09-02
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            4.6
+            4.7
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_trbundle_2014-06-06_including_wikipedia" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_trwiki_latest/Xowa_trbundle_2015-08-28.7z" class="external text" rel="nofollow">wikis and images</a><br>
           </p>
         </td>
       </tr>
@@ -2748,35 +2751,6 @@
         <td style='color:black; vertical-align:top;'>
           <p>
             <a href="https://archive.org/download/Xowa_etwiki_latest/Xowa_etbundle_2014-10-24.7z" class="external text" rel="nofollow">download</a><br>
-          </p>
-        </td>
-      </tr>
-      <tr style='color:black; border-collapse:collapse;'>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://de.wikipedia.org/wiki/">https://de.wikipedia.org</a>
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            2014-10-24
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-        </td>
-        <td style='color:black; vertical-align:top; text-align:right;'>
-          <p>
-            3.1
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            .sqlite3
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2014-10-24_images_update.7z" class="external text" rel="nofollow">download</a>
           </p>
         </td>
       </tr>
