--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,42 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_v2.9.1.1_.282015-09-06_20:00_Sun.29'>Release: v2.9.1.1 (2015-09-06 20:00 Sun)</span>
+    </h2>
+    <p>
+      v2.9.1 is a light release. It adss a new Graph extension.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Added_Graph_extension._Help:Diagnostics.2FJavascript.2FGraph'>Added Graph extension. [[Help:Diagnostics/Javascript/Graph]]</span>
+    </h3>
+    <p>
+      MediaWiki recently began incorporating a new Javascript-centric extension for making graphs. They only show up on a few pages, but I wanted to make sure XOWA handled them before they show up on more.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Removed_Mac_OS_X_DMG'>Removed Mac OS X DMG</span>
+    </h3>
+    <p>
+      I ended up removing the Mac OS X DMG. The main problem is that future updates (for example v2.9.1) would actually overwrite any existing wikis. I'll reinstate the DMG at a future release, but I'll need to make some XOWA changes to allow customized user wiki folders.
+    </p>
+    <h3>
+      <span class='mw-headline' id='Updated_images_for_German_and_Turkish_wikis'>Updated images for German and Turkish wikis</span>
+    </h3>
+    <p>
+      These updates were uploaded earlier this week to <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_dewiki_latest</a> and <a href="https://archive.org/details/Xowa_trwiki_latest" class="external text" rel="nofollow">https://archive.org/details/Xowa_trwiki_latest</a> .
+    </p>
+    <h3>
+      <span class='mw-headline' id='Next_release:_v2.9.2'>Next release: v2.9.2</span>
+    </h3>
+    <p>
+      For images, I'm going to work on Chinese, Indonesian and Romainian.
+    </p>
+    <p>
+      For development, I plan to work on the Math parser and some more infrastructure items.
+    </p>
+    <p>
+      <br>
+    </p>
+    <h2>
       <span class='mw-headline' id='Release:_v2.8.5.1_.282015-08-30_20:15_Sun.29'>Release: v2.8.5.1 (2015-08-30 20:15 Sun)</span>
     </h2>
     <p>
